Add Create and Delete handlers for Application resource. (#2)