@@ -1,116 +1,102 @@
-package software.amazon.qbusiness.webexperience;
+package software.amazon.qbusiness.application;
 
-// TODO: replace all usage of SdkClient with your service client type, e.g; YourServiceAsyncClient
-// import software.amazon.awssdk.services.yourservice.YourServiceAsyncClient;
+import static software.amazon.qbusiness.application.Constants.API_CREATE_APPLICATION;
 
-import software.amazon.awssdk.awscore.AwsResponse;
-import software.amazon.awssdk.awscore.exception.AwsServiceException;
-import software.amazon.awssdk.core.SdkClient;
+import java.time.Duration;
+
 import software.amazon.awssdk.services.qbusiness.QBusinessClient;
-import software.amazon.cloudformation.exceptions.CfnGeneralServiceException;
+import software.amazon.awssdk.services.qbusiness.model.ApplicationStatus;
+import software.amazon.awssdk.services.qbusiness.model.CreateApplicationRequest;
+import software.amazon.awssdk.services.qbusiness.model.CreateApplicationResponse;
+import software.amazon.awssdk.services.qbusiness.model.DescribeApplicationResponse;
+import software.amazon.awssdk.utils.StringUtils;
+import software.amazon.cloudformation.exceptions.CfnNotStabilizedException;
 import software.amazon.cloudformation.proxy.AmazonWebServicesClientProxy;
 import software.amazon.cloudformation.proxy.Logger;
 import software.amazon.cloudformation.proxy.ProgressEvent;
 import software.amazon.cloudformation.proxy.ProxyClient;
 import software.amazon.cloudformation.proxy.ResourceHandlerRequest;
-
+import software.amazon.cloudformation.proxy.delay.Constant;
 
 public class CreateHandler extends BaseHandlerStd {
-    private Logger logger;
 
-    protected ProgressEvent<ResourceModel, CallbackContext> handleRequest(
-        final AmazonWebServicesClientProxy proxy,
-        final ResourceHandlerRequest<ResourceModel> request,
-        final CallbackContext callbackContext,
-        final ProxyClient<QBusinessClient> proxyClient,
-        final Logger logger) {
+  private static final Constant DEFAULT_BACK_OFF_STRATEGY = Constant.of()
+      .timeout(Duration.ofHours(4))
+      .delay(Duration.ofMinutes(2))
+      .build();
 
-        this.logger = logger;
-        logger.log("Starting to process Create Application request for Account: %s".formatted(request.getAwsAccountId()));
+  private final Constant backOffStrategy;
+  private Logger logger;
 
-        return ProgressEvent.progress(request.getDesiredResourceState(), callbackContext)
+  public CreateHandler() {
+    this(DEFAULT_BACK_OFF_STRATEGY);
+  }
 
-            // STEP 1 [check if resource already exists]
-            // if target API does not support 'ResourceAlreadyExistsException' then following check is required
-            // for more information -> https://docs.aws.amazon.com/cloudformation-cli/latest/userguide/resource-type-test-contract.html
-            .then(progress ->
-                // STEP 1.0 [initialize a proxy context]
-                // If your service API is not idempotent, meaning it does not distinguish duplicate create requests against some identifier (e.g; resource Name)
-                // and instead returns a 200 even though a resource already exists, you must first check if the resource exists here
-                // NOTE: If your service API throws 'ResourceAlreadyExistsException' for create requests this method is not necessary
-                proxy.initiate("AWS-QBusiness-WebExperience::Create::PreExistanceCheck", proxyClient, progress.getResourceModel(), progress.getCallbackContext())
+  public CreateHandler(Constant backOffStrategy) {
+    this.backOffStrategy = backOffStrategy;
+  }
 
-                    // STEP 1.1 [TODO: construct a body of a request]
-                    .translateToServiceRequest(Translator::translateToReadRequest)
+  protected ProgressEvent<ResourceModel, CallbackContext> handleRequest(
+      final AmazonWebServicesClientProxy proxy,
+      final ResourceHandlerRequest<ResourceModel> request,
+      final CallbackContext callbackContext,
+      final ProxyClient<QBusinessClient> proxyClient,
+      final Logger logger) {
 
-                    // STEP 1.2 [TODO: make an api call]
-                    .makeServiceCall((awsRequest, client) -> {
-                        AwsResponse awsResponse = null;
+    this.logger = logger;
+    logger.log("[INFO] Starting to process Create Application request in stack: %s for Account: %s"
+        .formatted(request.getStackId(), request.getAwsAccountId()));
 
-                        // TODO: add custom read resource logic
+    return ProgressEvent.progress(request.getDesiredResourceState(), callbackContext)
+        .then(progress ->
+            proxy.initiate("AWS-QBusiness-Application::Create", proxyClient, progress.getResourceModel(), progress.getCallbackContext())
+                .translateToServiceRequest(model -> Translator.translateToCreateRequest(request.getClientRequestToken(), model))
+                .backoffDelay(backOffStrategy)
+                .makeServiceCall((awsRequest, clientProxyClient) -> callCreateApplication(awsRequest, clientProxyClient, progress.getResourceModel()))
+                .stabilize((awsReq, response, clientProxyClient, model, context) -> isStabilized(clientProxyClient, model, logger))
+                .handleError((createReq, error, client, model, context) ->
+                    handleError(createReq, model, error, context, logger, API_CREATE_APPLICATION))
+                .progress()
+        ).then(progress ->
+            new ReadHandler().handleRequest(proxy, request, callbackContext, proxyClient, logger)
+        );
+  }
 
-                        logger.log(String.format("%s has successfully been read.", ResourceModel.TYPE_NAME));
-                        return awsResponse;
-                    })
+  private boolean isStabilized(
+      ProxyClient<QBusinessClient> proxyClient,
+      ResourceModel model,
+      Logger logger
+  ) {
+    DescribeApplicationResponse getAppResponse = getApplication(model, proxyClient, logger);
 
-                    // STEP 1.3 [TODO: handle exception]
-                    .handleError((awsRequest, exception, client, model, context) -> {
-                        // TODO: uncomment when ready to implement
-                        // if (exception instanceof CfnNotFoundException)
-                        //     return ProgressEvent.progress(model, context);
-                        // throw exception;
-                        return ProgressEvent.progress(model, context);
-                    })
-                    .progress()
-            )
+    var status = getAppResponse.statusAsString();
 
-            // STEP 2 [create/stabilize progress chain - required for resource creation]
-            .then(progress ->
-                // If your service API throws 'ResourceAlreadyExistsException' for create requests then CreateHandler can return just proxy.initiate construction
-                // STEP 2.0 [initialize a proxy context]
-                // Implement client invocation of the create request through the proxyClient, which is already initialised with
-                // caller credentials, correct region and retry settings
-                proxy.initiate("AWS-QBusiness-WebExperience::Create", proxyClient,progress.getResourceModel(), progress.getCallbackContext())
-
-                    // STEP 2.1 [TODO: construct a body of a request]
-                    .translateToServiceRequest(Translator::translateToCreateRequest)
-
-                    // STEP 2.2 [TODO: make an api call]
-                    .makeServiceCall((awsRequest, client) -> {
-                        AwsResponse awsResponse = null;
-                        try {
-
-                            // TODO: put your create resource code here
-
-                        } catch (final AwsServiceException e) {
-                            /*
-                            * While the handler contract states that the handler must always return a progress event,
-                            * you may throw any instance of BaseHandlerException, as the wrapper map it to a progress event.
-                            * Each BaseHandlerException maps to a specific error code, and you should map service exceptions as closely as possible
-                            * to more specific error codes
-                            */
-                            throw new CfnGeneralServiceException(ResourceModel.TYPE_NAME, e);
-                        }
-
-                        logger.log(String.format("%s successfully created.", ResourceModel.TYPE_NAME));
-                        return awsResponse;
-                    })
-
-                    // STEP 2.3 [TODO: stabilize step is not necessarily required but typically involves describing the resource until it is in a certain status, though it can take many forms]
-                    // for more information -> https://docs.aws.amazon.com/cloudformation-cli/latest/userguide/resource-type-test-contract.html
-                    // If your resource requires some form of stabilization (e.g. service does not provide strong consistency), you will need to ensure that your code
-                    // accounts for any potential issues, so that a subsequent read/update requests will not cause any conflicts (e.g. NotFoundException/InvalidRequestException)
-                    .stabilize((awsRequest, awsResponse, client, model, context) -> {
-                        // TODO: put your stabilization code here
-
-                        final boolean stabilized = true;
-                        logger.log(String.format("%s [%s] has been stabilized.", ResourceModel.TYPE_NAME, model.getPrimaryIdentifier()));
-                        return stabilized;
-                    })
-                    .progress()
-                )
-
-            // STEP 3 [TODO: describe call/chain to return the resource model]
-            .then(progress -> new ReadHandler().handleRequest(proxy, request, callbackContext, proxyClient, logger));
+    if (ApplicationStatus.ACTIVE.toString().equals(status)) {
+      logger.log("[INFO] %s with ID: %s has stabilized".formatted(ResourceModel.TYPE_NAME, model.getApplicationId()));
+      return true;
     }
+
+    if (!ApplicationStatus.FAILED.toString().equals(status)) {
+      logger.log("[INFO] %s with ID: %s is still stabilizing.".formatted(ResourceModel.TYPE_NAME, model.getApplicationId()));
+      return false;
+    }
+
+    // handle failed state
+
+    RuntimeException causeMessage = null;
+    if (StringUtils.isNotBlank(getAppResponse.errorMessage())) {
+      causeMessage = new RuntimeException(getAppResponse.errorMessage());
+    }
+
+    throw new CfnNotStabilizedException(ResourceModel.TYPE_NAME, model.getApplicationId(), causeMessage);
+  }
+
+  private CreateApplicationResponse callCreateApplication(CreateApplicationRequest request,
+      ProxyClient<QBusinessClient> proxyClient,
+      ResourceModel model) {
+    var client = proxyClient.client();
+    CreateApplicationResponse response = proxyClient.injectCredentialsAndInvokeV2(request, client::createApplication);
+    model.setApplicationId(response.applicationId());
+    return response;
+  }
 }
